--- a/source/cases.html
+++ b/source/cases.html
@@ -109,7 +109,7 @@ data-type:
     <table class="table-sortable table-section__table">
       <thead class="cases">
         <th class="table-sortable__head-cell case__title">
-          <span>Case</span>
+          <span>Collaborative</span>
 
           <div class="table-sortable__control-group">
 
@@ -140,7 +140,7 @@ data-type:
         </th>
 
         <th class="table-sortable__head-cell case__type">
-          <span>Collaborative Type</span>
+          <span>Type</span>
           <div class="table-sortable__control-group">
             <span class="table-sortable__control table-sortable__control--simple sort" data-sort="case__type"><i class="material-icons">keyboard_arrow_down</i></span>
           </div>
