--- a/source/events.html
+++ b/source/events.html
@@ -22,8 +22,8 @@ title: Events | Data Collaboratives
         {% assign eventDate = event.eventDate  %}
 
         {% if eventDate >= currentDate %}
-        <div class="individual-event">
-          <h5 class="js-open-modal"><a href="#">{{event.eventName}}</a></h5>
+        <div class="individual-event js-open-modal">
+          <h5><a class="events-panels__title" href="#">{{event.eventName}}</a></h5>
 
 
           <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
@@ -54,10 +54,11 @@ title: Events | Data Collaboratives
         {% for event in events reversed %}
         {% assign eventDate = event.eventDate  %}
         {% if eventDate < currentDate %}
-        <div class="individual-event">
-          <h5>{{event.eventName}}</h5>
+        <div class="individual-event js-open-modal">
+          <h5><a class="events-panels__title" href="#">{{event.eventName}}</a></h5>
           <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
 
+          {% include events-modal.html %}
           <!-- {% if event.url %}
             <a href="{{event.url}}">Go to website</a>
           {% endif %}
