--- a/source/resources.html
+++ b/source/resources.html
@@ -7,7 +7,7 @@ title: Resources | Data Collaboratives
   <div class="top-section top-section--yellow-list-page">
     <h2 class="top-section__list-header">Resources</h2>
   </div>
-  
+
   <div class="page-section page-section--gray">
     <div class="row align-center">
       <h4>Filters</h4>
@@ -63,7 +63,7 @@ title: Resources | Data Collaboratives
   <div class="page-section results-section">
     <div class="row expanded">
       <div id="resources" class="columns results-container">
-        <div class="list">
+        <div id="list" class="list">
           {% for resource in resources %}
           <div class="result-item js-open-modal" style="display: inline-block; margin-left: -4px;">
             <h3 class="result-item__name">{{resource.title}}</h3>
