--- a/source/introduction.html
+++ b/source/introduction.html
@@ -112,6 +112,9 @@ subtitle:
     </div>
     <div class="section " id="slide028">
       <img src="/images/slides/slide028.jpeg" id="slide028" alt="slide028" />
+      <div class="row align-center" id="download-container">
+        <a href="#" target="_blank" id="intro-button" class="button">Download the PDF</a>
+      </div>
     </div>
   </div>
 </div>
