--- a/source/events.html
+++ b/source/events.html
@@ -14,86 +14,51 @@ title: Events | Data Collaboratives
   <div class="divider">
     <h1>Upcoming Events</h1>
   </div>
-
-  <div class="page-section">
-    <div class="row expanded align-center">
-      <div class="large-8 column">
-        {% for event in events %}
-        {% assign eventDate = event.eventDate  %}
-
-        {% if eventDate >= currentDate %}
-        <div class="individual-event js-open-modal">
-          <h5><a class="events-page__title" href="#">{{event.eventName}}</a></h5>
-          <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
-          {% include events-modal.html %}
+  <div id="events" class="columns results-container">
+    <div id="list" class="list">
+    {% for event in events %}
+      {% assign eventDate = event.eventDate  %}
+      {% if eventDate >= currentDate %}
+      <div class="result-item result-item--event js-open-modal">
+        <h3 class="result-item--event__name">{{event.eventName}}</h3>
+        
+        <div class="result-item--event__date fancy-date">
+          <div class="fancy-date__stack">
+          <span class="fancy-date__weekday">{{event.eventDate | date: "%A" }}</span>
+          <span class="fancy-date__month">{{event.eventDate | date: "%B" }}</span>
+          </div>        
+          <span class="fancy-date__day">{{event.eventDate | date: " %d" }}</span>
+          <!-- <span class="fancy-date__year">{{event.eventDate | date: "%Y" }}</span> -->
         </div>
-        {% endif %}
-        {% endfor %}
-
-
-        {% if events[-1].eventDate < currentDate and events[0].eventDate != currentDate %}
-          <p>There are no upcoming events.</p>
-        {% endif %}
-
+        {% include events-modal.html %}
       </div>
+      {% endif %}
+    {% endfor %}
     </div>
+    {% if events[-1].eventDate < currentDate and events[0].eventDate != currentDate %}
+      <h4 class="no-events">There are no upcoming events.</h4>
+    {% endif %}
   </div>
 
   <div class="divider">
     <h1>Past Events</h1>
   </div>
 
-  <div class="page-section">
-    <div class="row expanded align-center">
-      <div class="large-8 column">
-        {% for event in events reversed %}
-        {% assign eventDate = event.eventDate  %}
-        {% if eventDate < currentDate %}
-        <div class="individual-event js-open-modal">
-          <h5><a class="events-page__title" href="#">{{event.eventName}}</a></h5>
-          <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
-          {% include events-modal.html %}
-        </div>
-        {% endif %}
-        {% endfor %}
-
-        {% if events[0].eventDate > currentDate and events[0].eventDate != currentDate %}
-          <p>There are no past events.</p>
-        {% endif %}
+  <div id="events" class="columns results-container">
+    <div id="list" class="list">
+    {% for event in events reversed %}
+      {% assign eventDate = event.eventDate  %}
+      {% if eventDate < currentDate %}
+      <div class="result-item js-open-modal">
+        <h3 class="result-item__name">{{event.eventName}}</h3>
+        <p class="result-item__authors">{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
+        {% include events-modal.html %}
       </div>
+      {% endif %}
+    {% endfor %}
     </div>
-  </div>
-
-  <!-- <section class="events-panels">
-    <div class="row expanded align-center">
-      <div class="large-6 column events-panels__first">
-        <h4>Upcoming Events</h4>
-        {% for event in events %}
-        {% assign eventDate = event.eventDate  %}
-
-        {% if eventDate >= currentDate %}
-        <div class="individual-event js-open-modal">
-          <h5><a class="events-panels__title" href="#">{{event.eventName}}</a></h5>
-          <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
-          {% include events-modal.html %}
-        </div>
-        {% endif %}
-        {% endfor %}
-      </div>
-      <div class="large-6 column events-panels__second">
-        <h4>Past Events</h4>
-        {% for event in events reversed %}
-        {% assign eventDate = event.eventDate  %}
-        {% if eventDate < currentDate %}
-        <div class="individual-event js-open-modal">
-          <h5><a class="events-panels__title" href="#">{{event.eventName}}</a></h5>
-          <p>{{event.eventDate | date: "%A, %B %d, %Y" }}</p>
-          {% include events-modal.html %}
-        </div>
-        {% endif %}
-        {% endfor %}
-        </div>
-    </div>
-  </section> -->
+    {% if events[0].eventDate > currentDate and events[0].eventDate != currentDate %}
+      <h4 class="no-events">There are no past events.</h4>
+    {% endif %}
   </div>
 </div>
