--- a/source/index.html
+++ b/source/index.html
@@ -95,7 +95,7 @@ subtitle:
         </div>
         <div class="row collapse">
           <div class="large-6 column">
-            <div class="icon-box">
+            <div class="icon-box api">
               <img src="/images/icons/icons_09.png" alt="">
               <p>Application Programming Interfaces (APIs)</p>
             </div>
