Add back clear all button

--- a/source/cases.html
+++ b/source/cases.html
@@ -96,9 +96,12 @@ data-type:
 
         <div class="column large-1">
           <div class="close clear_filters table-sortable__control table-sortable__control--simple table-sortable--clear-all">
-            <div class="clear-all-text">
+            <!-- <div class="clear-all-text">
               <button class="button button--icon-only" type="button" name="button" style="margin: 4px 0;"><i class="material-icons close-icon">close</i></button>
-            </div>
+            </div> -->
+          </div>
+          <div class="columns clear_filters">
+            <button class="button button--icon-only" type="button" name="button"><i class="material-icons">close</i></button>
           </div>
         </div>
       </div>
