--- a/source/cases.html
+++ b/source/cases.html
@@ -34,6 +34,7 @@ data-type:
 - "Disclosed Non-Personal Data"
 - "Observed Personal Data"
 - "Observed Non-Personal Data"
+custom_js: listScripts.js
 ---
 
 <div class="list-page">
