Fix index on mobile

--- a/source/index.html
+++ b/source/index.html
@@ -122,7 +122,7 @@ subtitle:
 </section>
 
 <section id="services" class="page-section checkerboard">
-  <div class="row expanded collapse">
+  <div class="row expanded medium-unstack">
     <div class="column large-4">
       <div class="checkerboard__content">
         <h6 class="checkerboard__header">Data Collaboratives Explorer</h6>
