Add responsive download button

--- a/source/introduction.html
+++ b/source/introduction.html
@@ -4,12 +4,18 @@ title: Introduction | Data Collaboratives
 subtitle:
 ---
 
+
 <div id="introduction">
   <div id="fullpage">
 
     <div class="section" id="section01">
       <img src="/images/slides/slide01.jpeg" id="slide01" alt="slide01" />
+      <div class="row expanded align-center" id="download-container">
+        <a href="#" target="_blank" id="intro-button" class="button">Download the PDF</a>
+      </div>
     </div>
+
+
     <div class="section " id="section02">
       <img src="/images/slides/slide02.jpeg" id="slide02" alt="slide02" />
     </div>
@@ -112,9 +118,10 @@ subtitle:
     </div>
     <div class="section " id="slide028">
       <img src="/images/slides/slide028.jpeg" id="slide028" alt="slide028" />
-      <div class="row align-center" id="download-container">
-        <a href="#" target="_blank" id="intro-button" class="button">Download the PDF</a>
-      </div>
     </div>
   </div>
+</div>
+
+<div class="row align-center" id="download-container">
+  <a href="#" target="_blank" id="intro-button" class="button">Download the PDF</a>
 </div>
