Add download button and horizontal slider directions

--- a/source/introduction.html
+++ b/source/introduction.html
@@ -27,6 +27,9 @@ subtitle:
     <div class="section" id="section04">
       <div class="slide" data-anchor="4a"> 
         <img src="/images/slides/slide04.jpeg" id="slide04" alt="slide04" />
+        <div class="row expanded align-center" id="slide-instructions">
+          <p>Click on the arrows or use your keyboard to navigate left and right</p>
+        </div>
       </div>
       <div class="slide" data-anchor="4b">
         <img src="/images/slides/slide05.jpeg" id="slide05" alt="slide05" />
@@ -40,6 +43,9 @@ subtitle:
     <div class="section " id="section05">
       <div class="slide" data-anchor="5a"> 
         <img src="/images/slides/slide07.jpeg" id="slide07" alt="slide07" />
+        <div class="row expanded align-center" id="slide-instructions">
+          <p>Click on the arrows or use your keyboard to navigate left and right</p>
+        </div>
       </div>
       <div class="slide" data-anchor="5b"> 
         <img src="/images/slides/slide08.jpeg" id="slide08" alt="slide08" />
@@ -53,6 +59,9 @@ subtitle:
     <div class="section " id="section06">
       <div class="slide" data-anchor="6a"> 
         <img src="/images/slides/slide010.jpeg" id="slide010" alt="slide010" />
+        <div class="row expanded align-center" id="slide-instructions">
+          <p>Click on the arrows or use your keyboard to navigate left and right</p>
+        </div>
       </div>
       <div class="slide" data-anchor="6b"> 
         <img src="/images/slides/slide011.jpeg" id="slide011" alt="slide011" />
@@ -72,6 +81,9 @@ subtitle:
     <div class="section " id="section07">
       <div class="slide" data-anchor="7a"> 
         <img src="/images/slides/slide015.jpeg" id="slide015" alt="slide015" />
+        <div class="row expanded align-center" id="slide-instructions">
+          <p>Click on the arrows or use your keyboard to navigate left and right</p>
+        </div>
       </div>
       <div class="slide" data-anchor="7b"> 
         <img src="/images/slides/slide016.jpeg" id="slide016" alt="slide016" />
@@ -88,6 +100,9 @@ subtitle:
       <div class="section " id="section08">
         <div class="slide" data-anchor="8a"> 
           <img src="/images/slides/slide019.jpeg" id="slide019" alt="slide019" />
+          <div class="row expanded align-center" id="slide-instructions">
+            <p>Click on the arrows or use your keyboard to navigate left and right</p>
+          </div>
         </div>
         <div class="slide" data-anchor="8b"> 
           <img src="/images/slides/slide020.jpeg" id="slide020" alt="slide020" />
