Add fixed download button

--- a/source/introduction.html
+++ b/source/introduction.html
@@ -6,13 +6,13 @@ subtitle:
 
 
 <div id="introduction">
+  <div class="row expanded align-right" id="download-container">
+    <a href="#" target="_blank" id="intro-button" class="button"><i class="material-icons m-space">file_download</i> Download the PDF</a>
+  </div>
   <div id="fullpage">
 
     <div class="section" id="section01">
       <img src="/images/slides/slide01.jpeg" id="slide01" alt="slide01" />
-      <div class="row expanded align-center" id="download-container">
-        <a href="#" target="_blank" id="intro-button" class="button">Download the PDF</a>
-      </div>
     </div>
 
 
