--- a/source/index.html
+++ b/source/index.html
@@ -47,11 +47,11 @@ subtitle:
         <h3>Creating Public Value...</h3>
         <h4>Data collaboratives, when designed well, can provide for better:</h4>
         <ul>
-          <li><a href="" class="button button--outline">Situational awareness and response</a></li>
-          <li><a href="" class="button button--outline">Public service design and delivery</a></li>
-          <li><a href="" class="button button--outline">Knowledge creation and transfer</a></li>
-          <li><a href="" class="button button--outline">Prediction and forecasting</a></li>
-          <li><a href="" class="button button--outline">Impact assessment and evaluation</a></li>
+          <li><span class="button button--outline">Situational awareness and response</span></li>
+          <li><span class="button button--outline">Public service design and delivery</span></li>
+          <li><span class="button button--outline">Knowledge creation and transfer</span></li>
+          <li><span class="button button--outline">Prediction and forecasting</span></li>
+          <li><span class="button button--outline">Impact assessment and evaluation</span></li>
         </ul>
       </div>
     </div>
@@ -115,8 +115,7 @@ subtitle:
 <section class="page-section callout-message">
   <div class="row align-center expanded">
     <div class="large-10 column">
-      <h2>Learn More About Data Collaboratives</h2>
-      <p><a href="{{ '/static/files/data-collaboratives.pdf' | relative_url }}" class="button">Download our booklet</a></p>
+      <p><a href="{{ '/static/files/data-collaboratives.pdf' | relative_url }}" class="button">Learn More About Data Collaboratives</a></p>
     </div>
   </div>
 </section>
@@ -133,7 +132,7 @@ subtitle:
     <div class="column large-4">
       <div class="checkerboard__content">
         <h6 class="checkerboard__header">Designing a Data Collaborative</h6>
-        <p class="checkerboard__main">How can institutions establish Data Collaboratives to the end of unlocking previously inaccessible data to the end of solving public problems? Our <strong>Data Collaboratives Guide</strong> outlines <strong>8 Steps</strong> for designing and implementing a Data Collaborative, complete with examples, enablers and resources to improve outcomes.</p>
+        <p class="checkerboard__main">How can institutions establish Data Collaboratives to the end of unlocking previously inaccessible data to the end of solving public problems? Our <strong>Data Collaboratives Guide</strong> outlines <strong>8 Phases</strong> for designing and implementing a Data Collaborative, complete with examples, enablers and resources to improve outcomes.</p>
         <p class="checkerboard__footer"><a href="{{ '/canvas.html' | relative_url }}" class="button button--main-color">More</a></p>
       </div>
     </div>
